--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,28 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/pageTitle"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/header_image"
         android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:src="@drawable/gw_orlando_logo_1"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-125dp"
+        android:contentDescription="Green Works Orlando logo"
+        android:layout_centerHorizontal="true"/>
+        <!-- android:layout_alignParentStart="true"  -->
+
+    <TextView
+        android:id="@+id/tvScannedItemHistory"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="History"
+        android:text="Scanned Item History"
+        android:gravity="center_horizontal"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        android:padding="16dp"
+        android:layout_below="@id/header_image"
+        />
+        <!-- start|center_vertical -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@id/tvScannedItemHistory"
+        android:scrollbars="vertical"
+        android:layout_above="@+id/city_of_orlando_image"/>
+
+
+    <ImageView
+        android:id="@+id/city_of_orlando_image"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:src="@drawable/city_of_orlando_logo_new_1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:contentDescription="City of Orlando logo"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="60dp"
+        />
+        <!-- android:layout_centerHorizontal="true"   -->
+        <!-- android:layout_marginStart="-20dp"  -->
+
+    <TextView
+        android:id="@+id/city_of_orlando_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/city_of_orlando_image"
+        android:layout_alignBottom="@+id/city_of_orlando_image"
+        android:text="© 2024 City of Orlando"
+        android:layout_marginStart="-25dp"
+        android:textColor="#FF000000" />
+
+</RelativeLayout>
+
+
+
 
 
 
