--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ContactFragment"
-    android:background="@color/gray_background"
+    android:background="@color/soft_gray"
     android:orientation="vertical">
 
     <RelativeLayout
