--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,8 @@
     <color name="medium_dark_green">#5ea154</color>
     <color name="dark_green">#397245</color>
     <color name="snow">#FFFAFA</color>
-    <color name="soft_gray">#F3F3F5</color>
-    <color name="light_gray">#DCDDDF</color>
+    <color name="soft_gray">#E4E4EC</color>
+    <color name="light_gray">#D3D3D3</color>
     <color name="gray">#92969C</color>
     <color name="red">#FF0000</color>
 </resources>
