--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="90dp"
         android:maxWidth="300dp"
         android:contentDescription="@string/logo"
