--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,14 +40,34 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/main_menu" >
 
-        <TextView
-            android:id="@+id/version"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:padding="10dp"
-            android:text=""
-            android:textColor="@color/black" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:padding="5dp"
+                android:text=""
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:padding="5dp"
+                android:text="@string/made_with_by_valencia_ctsd"
+                android:textSize="8sp"
+                android:textColor="@color/black"
+                tools:ignore="SmallSp" />
+
+        </LinearLayout>
+
+
 
     </com.google.android.material.navigation.NavigationView>
 
