--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,32 +22,42 @@
             android:orientation="vertical"
             android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rewards"
-                android:textStyle="bold"
-                android:textSize="11sp"
-                android:textColor="@color/black"/>
             <LinearLayout
-                android:id="@+id/rewards"
+                android:id="@+id/rewardsLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:focusable="auto">
+                android:orientation="vertical"
+                android:clickable="true"
+                tools:ignore="UselessParent"
+                android:focusable="true">
 
                 <TextView
-                    android:id="@+id/rewardsPointsTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/_100"
-                    android:layout_marginEnd="5dp"/>
-                <TextView
+                    android:text="@string/rewards"
+                    android:textStyle="bold"
+                    android:textSize="11sp"
+                    android:textColor="@color/black"/>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/points" />
+                    android:orientation="horizontal"
+                    android:focusable="auto">
+
+                    <TextView
+                        android:id="@+id/rewardsPointsTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/_100"
+                        android:layout_marginEnd="5dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/points" />
+                </LinearLayout>
+
+
             </LinearLayout>
-
 
         </LinearLayout>
 
