--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -9,56 +9,61 @@
     android:gravity="center"
     tools:context=".WelcomeFragment">
 
-    <ImageView
-        android:id="@+id/logo"
+    <LinearLayout
         android:layout_width="300dp"
-        android:layout_height="90dp"
-        android:maxWidth="300dp"
-        android:contentDescription="@string/logo"
-        app:srcCompat="@drawable/logo_full"
-        tools:ignore="ImageContrastCheck" />
-
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="55dp"
-        android:maxWidth="300dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/green"
-        android:text="@string/login"
-        android:textColor="@color/white"
-        tools:ignore="TextContrastCheck" />
-
-    <Button
-        android:id="@+id/signUpButton"
-        style="@style/CustomButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="60dp"
-        android:maxWidth="300dp"
-        android:text="@string/sign_up"
-        android:textColor="@color/green"
-        tools:ignore="TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/continueAsGuest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:clickable="true"
-        android:focusable="true"
         android:gravity="center"
-        android:linksClickable="true"
-        android:minHeight="48dp"
-        android:text="@string/continue_as_guest"
-        android:textColor="@color/dark_green"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:ignore="TextContrastCheck" />
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:maxWidth="300dp"
+            android:contentDescription="@string/logo"
+            app:srcCompat="@drawable/logo_full"
+            tools:ignore="ImageContrastCheck" />
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/green"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            tools:ignore="TextContrastCheck" />
+
+        <Button
+            android:id="@+id/signUpButton"
+            style="@style/CustomButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:maxWidth="300dp"
+            android:text="@string/sign_up"
+            android:textColor="@color/green"
+            tools:ignore="TextContrastCheck" />
+
+        <TextView
+            android:id="@+id/continueAsGuest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:linksClickable="true"
+            android:minHeight="48dp"
+            android:text="@string/continue_as_guest"
+            android:textColor="@color/dark_green"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="TextContrastCheck" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
